[gd_scene load_steps=5 format=3 uid="uid://dqdf5u474ojx"]

[ext_resource type="PackedScene" uid="uid://cue2tgc53d7p8" path="res://team.tscn" id="1_as5hc"]
[ext_resource type="Script" path="res://main.gd" id="1_ij781"]
[ext_resource type="PackedScene" uid="uid://brk8yoravkajb" path="res://team_lookup.tscn" id="3_0uds8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yn5t2"]
bg_color = Color(0.303233, 0.303233, 0.303233, 1)

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ij781")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Teams" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="RedTeam1" parent="ScrollContainer/VBoxContainer/Teams" instance=ExtResource("1_as5hc")]
unique_name_in_owner = true
layout_mode = 2
is_red = true

[node name="BlueTeam1" parent="ScrollContainer/VBoxContainer/Teams" instance=ExtResource("1_as5hc")]
unique_name_in_owner = true
layout_mode = 2

[node name="RedTeam2" parent="ScrollContainer/VBoxContainer/Teams" instance=ExtResource("1_as5hc")]
unique_name_in_owner = true
layout_mode = 2
is_red = true

[node name="BlueTeam2" parent="ScrollContainer/VBoxContainer/Teams" instance=ExtResource("1_as5hc")]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "4"
placeholder_text = "How many teams are you tracking?"
max_length = 1

[node name="TeamLookups" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="TeamLookup" parent="ScrollContainer/VBoxContainer/TeamLookups" instance=ExtResource("3_0uds8")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="ScrollContainer/VBoxContainer/TeamLookups"]
layout_mode = 2

[node name="TeamLookup2" parent="ScrollContainer/VBoxContainer/TeamLookups" instance=ExtResource("3_0uds8")]
layout_mode = 2

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yn5t2")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="ServerButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Create a Server"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ClientButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create a Client"

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "IP Address"
expand_to_text_length = true

[node name="LocalButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Run Locally"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="text_changed" from="ScrollContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/ServerButton" to="." method="_on_server_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer/ClientButton" to="." method="_on_client_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/LocalButton" to="." method="_on_local_button_pressed"]
